Finished Content and Quote divs

--- a/index.html
+++ b/index.html
@@ -27,5 +27,20 @@
       </div>
     </div>
   </header>
+  <div class="content">
+    <h2>Some random information</h2>
+    <div class="content-container">
+      <div class="items"><div class="square"></div>this is some subtext under an illustration or image</div>
+      <div class="items"><div class="square"></div>this is some subtext under an illustration or image</div>
+      <div class="items"><div class="square"></div>this is some subtext under an illustration or image</div>
+      <div class="items"><div class="square"></div>this is some subtext under an illustration or image</div>
+    </div>
+  </div>
+  <div class="quote">
+    <div class="quote-container">
+      <em><p class="phrase">Through all the struggles there is positivity. Where there is positivity, there is hope. Where there is hope, there is power</p></em>
+      <p class="author">- Carl Gustav Jung</p>
+    </div>
+  </div>
 </body>
 </html>
