Started designing the Call-to-action content

--- a/index.html
+++ b/index.html
@@ -42,5 +42,16 @@
       <p class="author">- Carl Gustav Jung</p>
     </div>
   </div>
+  <div class="content02">
+    <div class="blue-content">
+      <div class="container-left">
+        <p class="calltoaction">Call to action! It's time!</p>
+        <p>Sign up for our product by clicking that button right over there!</p>
+      </div>
+      <div class="container-right">
+        <button>Sign up</button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
