Finished content02 and started footer

--- a/index.html
+++ b/index.html
@@ -46,12 +46,15 @@
     <div class="blue-content">
       <div class="container-left">
         <p class="calltoaction">Call to action! It's time!</p>
-        <p>Sign up for our product by clicking that button right over there!</p>
+        <p class="call-text">Sign up for our product by clicking that button right over there!</p>
       </div>
       <div class="container-right">
         <button>Sign up</button>
       </div>
     </div>
   </div>
+  <footer>
+    <p>Copyright © The Odin Project 2021</p>
+  </footer>
 </body>
 </html>
